regression for skintone

--- a/TripletModels.ipynb
+++ b/TripletModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -35,10 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb156980",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((6842, 166), (1711, 166))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_labels = pd.read_csv('train_data_augmented_balanceddual.csv')\n",
     "validation_labels = pd.read_csv('validation_data_augmented_balanceddual.csv')\n",
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "02e6f6cd-7a43-48de-a6ac-747821eddb8c",
    "metadata": {
     "scrolled": true,
@@ -70,7 +81,72 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4869, 167)\n",
+      "(1209, 167)\n",
+      "model being saved to ../../data/models/dualencoder_resnet_flatbias_h400_ed5decodewithrregression__st400_a400_g400_std2_ad2_gd2_rbalanced\n",
+      "epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n",
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([50])) that is different to the input size (torch.Size([50, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curr loss class 22.432090759277344 embed 1.3817708492279053 step 96  | \r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([19])) that is different to the input size (torch.Size([19, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 21.748472165088263 train embed loss 1.6540638755778878 train accuracy [0.056, 0.42, 0.606]\n",
+      "val loss 22.112924270629883 val_embed_loss 1.2606768488883973 val accuracy [0.068, 0.504, 0.708] val f1 [0.062, 0.229, 0.332]\n",
+      "saved history to ../../data/results/history_dualencoder_resnet_flatbias_h400_ed5decodewithrregression__st400_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([9])) that is different to the input size (torch.Size([9, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 21.646439153320934 train embed loss 1.4623081854411535 train accuracy [0.056, 0.5, 0.672]\n",
+      "val loss 22.01333869934082 val_embed_loss 1.3007596397399903 val accuracy [0.068, 0.521, 0.747] val f1 [0.062, 0.22, 0.361]\n",
+      "saved history to ../../data/results/history_dualencoder_resnet_flatbias_h400_ed5decodewithrregression__st400_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 2\n",
+      "curr loss class 19.13224983215332 embed 1.189424753189087 step 78  | | \r"
+     ]
+    }
+   ],
    "source": [
     "def save_train_history(model,history,root=''):\n",
     "    model_name = model.get_identifier()\n",
@@ -102,6 +178,7 @@
     "                classification_loss_weight = 1,\n",
     "                starting_loss=100000,\n",
     "                bias_weight_transform=None,\n",
+    "                skintone_regression=False,\n",
     "                **kwargs,\n",
     "               ):\n",
     "    pretraining = classification_loss_weight <= .00001\n",
@@ -145,12 +222,14 @@
     "    model = model.to(device)\n",
     "    model.train(True)\n",
     "    \n",
-    "    loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "    cel = torch.nn.CrossEntropyLoss()\n",
+    "    format_y = lambda y: y.to(device)\n",
+    "    regression_loss = torch.nn.MSELoss()\n",
     "    triplet_loss = torch.nn.TripletMarginLoss()\n",
     "#     embedding_optimizer = torch.optim.Adam(model.encoder.parameters(), lr=lr)\n",
     "#     decoder_optimizer = torch.optim.Adam(model.decoder.parameters(), lr=lr)\n",
     "    optimizer = torch.optim.Adam(model.parameters(),lr=lr)\n",
-    "    format_y = lambda y: y.long().to(device)\n",
+    "    \n",
     "    \n",
     "    def format_batch(inputs,grad=True):\n",
     "        xb = []\n",
@@ -171,10 +250,15 @@
     "    \n",
     "    def classifier_step(m,embedding,ytrue):\n",
     "        outputs = m.decoder(embedding)\n",
-    "        losses = [loss_fn(ypred.float(),format_y(y)) for y,ypred in zip(ytrue,outputs)]\n",
-    "        l1 = torch.mul(loss_weights[0],losses[0])\n",
-    "        l2 =  torch.mul(loss_weights[1],losses[1])\n",
-    "        l3 =  torch.mul(loss_weights[2],losses[2])\n",
+    "        if not skintone_regression:\n",
+    "            losses = [cel(ypred.float(),format_y(y.long())) for y,ypred in zip(ytrue,outputs)]\n",
+    "            l1 = torch.mul(loss_weights[0],losses[0])\n",
+    "            l2 =  torch.mul(loss_weights[1],losses[1])\n",
+    "            l3 =  torch.mul(loss_weights[2],losses[2])\n",
+    "        else:\n",
+    "            l1 = torch.mul( regression_loss(outputs[0].float().view(-1),format_y(ytrue[0].float())), loss_weights[0])\n",
+    "            l2 = torch.mul( cel(outputs[1].float(),format_y(ytrue[1].long())), loss_weights[1])\n",
+    "            l3 = torch.mul(cel(outputs[2].float(),format_y(ytrue[2].long())), loss_weights[2])\n",
     "        total_losses = l1 + l2 + l3\n",
     "        total_loss = torch.mul(total_losses,classification_loss_weight)\n",
     "        return outputs,total_losses\n",
@@ -277,7 +361,7 @@
     "    return model,hist\n",
     "\n",
     "    \n",
-    "model = TripletModel(\n",
+    "model = TripletModel2(\n",
     "    encoder=TripletFacenetEncoder(base_model=ResNet18(),base_name='resnet_flatbias',embedding_dropout=.5),\n",
     ")\n",
     "\n",
@@ -288,10 +372,9 @@
     "    Constants.data_root,\n",
     "    batch_size=50,\n",
     "    embedding_loss_weight=1,\n",
-    "    classification_loss_weight=0,\n",
+    "    classification_loss_weight=.5,\n",
     "    lr=.0001,\n",
-    "    bias_weight_transform=lambda x: int(x > 0),\n",
-    "    random_upsample=False,\n",
+    "    skintone_regression=True,\n",
     ")\n",
     "del m\n",
     "h\n"
