added maybe alt triplet loss

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -446,11 +446,14 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(3,1,figsize=(10,20))\n",
+    "fig, ax = plt.subplots(len(compare_res.keys()),1,figsize=(10,20))\n",
     "titles = ['No Triplet', 'Triplet W/ Softmax Weights', 'Triplet W/ Balanced Weights']\n",
     "for i,key in enumerate(compare_res.keys()):\n",
     "    pd.DataFrame(compare_res[key]['metrics']).plot(kind='barh',ax=ax[i])\n",
-    "    ax[i].set_title(titles[i])\n",
+    "    if i < len(titles):\n",
+    "        ax[i].set_title(titles[i])\n",
+    "    else:\n",
+    "        ax[i].set_title(key)\n",
     "    ax[i].set_xlim(0,.9)"
    ]
   },
