alt triplet model working maybe

--- a/TripletModelsV2.ipynb
+++ b/TripletModelsV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -35,10 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb156980",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((6842, 166), (1711, 166))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_labels = pd.read_csv('train_data_augmented_balanceddual.csv')\n",
     "validation_labels = pd.read_csv('validation_data_augmented_balanceddual.csv')\n",
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "02e6f6cd-7a43-48de-a6ac-747821eddb8c",
    "metadata": {
     "scrolled": true,
@@ -65,13 +76,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "d5426fc1-8d63-4f17-aff7-1803ae493fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temp_generator = TripletFaceGenerator2(train_labels,Constants.data_root)\n",
+    "# batch = next(iter(temp_generator))\n",
+    "# [len(b) for b in batch]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ad5bca33",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4869, 167)\n",
+      "(1209, 167)\n",
+      "model being saved to ../../data/models/tripletv2_gridsearch3_smalldualencoder_dualfacenet_h400_ed3triplet_decoder__st100_a40_g20_std2_ad2_gd2_rbalancedsoftembed0.11_lw2-1-1_noise01\n",
+      "epoch 0\n",
+      "curr loss class 6.574786186218262 embed 0.3466024100780487 step 222  |   \r"
+     ]
+    }
+   ],
    "source": [
     "def save_train_history(model,history,root=''):\n",
     "    model_name = model.get_identifier()\n",
@@ -128,7 +163,7 @@
     "                skintone_regression=False,\n",
     "                noise=.05,\n",
     "                skintone_patch_anchor_prob=0,\n",
-    "                run_name = '',\n",
+    "                run_name = 'tripletv2_',\n",
     "                **kwargs,\n",
     "               ):\n",
     "    pretraining = classification_loss_weight <= .00001\n",
@@ -149,6 +184,7 @@
     "        save_path += '_spab'+str(skintone_patch_anchor_prob).replace('.','')\n",
     "    save_path += '_lw' + '-'.join([str(l) for l in loss_weights])\n",
     "    save_path += '_noise' + str(noise).replace('0.','').replace('.','')\n",
+    "    save_path += \"_V\" + str(np.round(np.random.random(),4))\n",
     "    if upsample:\n",
     "        patience = int(patience/5) + 1\n",
     "    class_sizes = [10,4,2]\n",
@@ -161,7 +197,7 @@
     "            vdf[col] = vdf[col].apply(bias_weight_transform)\n",
     "        train_df = tdf\n",
     "        validation_df = vdf\n",
-    "    train_loader = TripletFaceGenerator(train_df,Constants.data_root,\n",
+    "    train_loader = TripletFaceGenerator2(train_df,Constants.data_root,\n",
     "                                 batch_size=batch_size,\n",
     "                                 upsample=upsample,\n",
     "                                 random_upsample=random_upsample,\n",
@@ -169,7 +205,7 @@
     "                                 softmax=softmax_upsample_weights,\n",
     "                                 noise_sigma=noise,\n",
     "                                 **kwargs)\n",
-    "    validation_loader = TripletFaceGenerator(validation_df,Constants.data_root,\n",
+    "    validation_loader = TripletFaceGenerator2(validation_df,Constants.data_root,\n",
     "                                      validation=True,\n",
     "                                      batch_size=batch_size,\n",
     "                                      upsample=upsample_validation,\n",
@@ -199,11 +235,16 @@
     "            xb.append(xin)\n",
     "        return xb\n",
     "    \n",
-    "    def embedding_step(m,xbatch): \n",
-    "        base = m.encoder(xbatch[0])\n",
-    "        positive = m.encoder(xbatch[1])\n",
-    "        negative = m.encoder(xbatch[2])\n",
-    "        loss = triplet_loss(base,positive,negative)\n",
+    "    def embedding_step(m,xbatch,anchor_batch,bias_batch): \n",
+    "        base = m.encoder(xbatch)\n",
+    "        losses = []\n",
+    "        for anchor,bias in zip(anchor_batch, bias_batch):\n",
+    "            \n",
+    "            positive = m.encoder(anchor)\n",
+    "            negative = m.encoder(bias)\n",
+    "            loss = triplet_loss(base,positive,negative)\n",
+    "            losses.append(loss)\n",
+    "        loss = losses[0] + losses[1] + losses[2]\n",
     "        loss = torch.mul(loss,embedding_loss_weight)\n",
     "        return base,loss\n",
     "    \n",
@@ -229,10 +270,12 @@
     "        running_accuracy = [0,0,0]\n",
     "        curr_loss = 0\n",
     "        count = 0\n",
-    "        for i, [x_batch, y_batch] in enumerate(train_loader):\n",
-    "            x_batch = format_batch(x_batch)\n",
+    "        for i, [x_batch,anchor_batch,bias_batch, y_batch] in enumerate(train_loader):\n",
+    "            x_batch = format_batch([x_batch])[0]\n",
+    "            anchor_batch = format_batch(anchor_batch)\n",
+    "            bias_batch = format_batch(bias_batch)\n",
     "            optimizer.zero_grad()\n",
-    "            embedding,embedding_loss = embedding_step(model, x_batch)\n",
+    "            embedding,embedding_loss = embedding_step(model, x_batch,anchor_batch,bias_batch)\n",
     "            if pretraining:\n",
     "                classification_loss = embedding_loss - embedding_loss\n",
     "            else:\n",
@@ -259,9 +302,11 @@
     "        running_subclass_acc = [None,None,None]\n",
     "        count = 0\n",
     "        with torch.no_grad():\n",
-    "            for i, [x_batch, y_batch] in enumerate(validation_loader):\n",
-    "                x_batch = format_batch(x_batch,grad=False)\n",
-    "                embedding,embedding_loss = embedding_step(model, x_batch)\n",
+    "            for i, [x_batch,anchor_batch,bias_batch, y_batch] in enumerate(validation_loader):\n",
+    "                x_batch = format_batch([x_batch],grad=False)[0]\n",
+    "                anchor_batch = format_batch(anchor_batch,grad=False)\n",
+    "                bias_batch = format_batch(bias_batch,grad=False)\n",
+    "                embedding,embedding_loss = embedding_step(model, x_batch, anchor_batch_bias_batch)\n",
     "                if pretraining:\n",
     "                    classification_loss = embedding_loss - embedding_loss\n",
     "                else:\n",
@@ -296,6 +341,7 @@
     "        print('epoch',epoch)\n",
     "        model.train()\n",
     "        avg_loss,avg_embed_loss, avg_acc = train_epoch(model)\n",
+    "        return\n",
     "        print('train loss', avg_loss,'train embed loss',avg_embed_loss, 'train accuracy', shorten(avg_acc))\n",
     "        model.eval()\n",
     "        val_loss,val_embed_loss, val_acc, val_f1, val_disp = val_epoch(model)\n",
@@ -355,7 +401,9 @@
     "]\n",
     "\n",
     "results = []\n",
-    "for embed_loss_weight in [0,.1]:\n",
+    "best_score = 0\n",
+    "best_model = ''\n",
+    "for embed_loss_weight in [.1,0]:\n",
     "    for stap in [0]:\n",
     "        for noise in [.01]:\n",
     "            for loss_weights in [[2,1,1]]:\n",
@@ -373,7 +421,7 @@
     "                                train_labels,\n",
     "                                validation_labels,\n",
     "                                Constants.data_root,\n",
-    "                                batch_size=50,\n",
+    "                                batch_size=15,\n",
     "                                embedding_loss_weight=embed_loss_weight,\n",
     "                                classification_loss_weight=1 - embed_loss_weight,\n",
     "                                lr=.0001,\n",
@@ -391,16 +439,18 @@
     "                            entry['softmax'] = softmax\n",
     "                            entry['weight_type'] = wt\n",
     "                            entry['loss_weights'] = loss_weights\n",
+    "                            if entry['score'] > best_score:\n",
+    "                                best_score = entry['score']\n",
+    "                                best_model = entry['model']\n",
     "                            results.append(entry)\n",
     "                            print('___________')\n",
     "                            print(entry['score'],\n",
     "                                  entry['accuracy'],\n",
     "                                  entry['model'],\n",
-    "                                  entry['embed_weight'],\n",
-    "                                  wt,\n",
     "                                 )\n",
+    "                            print('best')\n",
     "                            print('______________')\n",
-    "                            pd.DataFrame(results).to_csv(Constants.result_folder + '_weight_gridsearch_presentation2.csv')\n",
+    "                            pd.DataFrame(results).to_csv(Constants.result_folder + '_alt_gridsearch.csv')\n",
     "                        except Exception as e:\n",
     "                            print(e)"
    ]
