smote like data augmentation

--- a/TripletModelsV2.ipynb
+++ b/TripletModelsV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -35,21 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bb156980",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((6842, 166), (1711, 166))"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_labels = pd.read_csv('train_data_augmented_balanceddual.csv')\n",
     "validation_labels = pd.read_csv('validation_data_augmented_balanceddual.csv')\n",
@@ -58,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "02e6f6cd-7a43-48de-a6ac-747821eddb8c",
    "metadata": {
     "scrolled": true,
@@ -76,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d5426fc1-8d63-4f17-aff7-1803ae493fbf",
    "metadata": {},
    "outputs": [],
@@ -94,19 +83,7 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4869, 167)\n",
-      "(1209, 167)\n",
-      "model being saved to ../../data/models/tripletv2_gridsearch3_smalldualencoder_dualfacenet_h400_ed3triplet_decoder__st100_a40_g20_std2_ad2_gd2_rbalancedsoftembed0.11_lw2-1-1_noise01\n",
-      "epoch 0\n",
-      "curr loss class 6.574786186218262 embed 0.3466024100780487 step 222  |   \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def save_train_history(model,history,root=''):\n",
     "    model_name = model.get_identifier()\n",
@@ -306,7 +283,7 @@
     "                x_batch = format_batch([x_batch],grad=False)[0]\n",
     "                anchor_batch = format_batch(anchor_batch,grad=False)\n",
     "                bias_batch = format_batch(bias_batch,grad=False)\n",
-    "                embedding,embedding_loss = embedding_step(model, x_batch, anchor_batch_bias_batch)\n",
+    "                embedding,embedding_loss = embedding_step(model, x_batch, anchor_batch,bias_batch)\n",
     "                if pretraining:\n",
     "                    classification_loss = embedding_loss - embedding_loss\n",
     "                else:\n",
@@ -341,7 +318,6 @@
     "        print('epoch',epoch)\n",
     "        model.train()\n",
     "        avg_loss,avg_embed_loss, avg_acc = train_epoch(model)\n",
-    "        return\n",
     "        print('train loss', avg_loss,'train embed loss',avg_embed_loss, 'train accuracy', shorten(avg_acc))\n",
     "        model.eval()\n",
     "        val_loss,val_embed_loss, val_acc, val_f1, val_disp = val_epoch(model)\n",
@@ -406,9 +382,9 @@
     "for embed_loss_weight in [.1,0]:\n",
     "    for stap in [0]:\n",
     "        for noise in [.01]:\n",
-    "            for loss_weights in [[2,1,1]]:\n",
+    "            for loss_weights in [[2,1,2]]:\n",
     "                for model in models:\n",
-    "                    for wt in ['softmax']:\n",
+    "                    for wt in ['default','softmax']:\n",
     "                        if embed_loss_weight == 0 and wt == 'flat':\n",
     "                            continue\n",
     "                        softmax = (wt == 'softmax')\n",
@@ -421,7 +397,7 @@
     "                                train_labels,\n",
     "                                validation_labels,\n",
     "                                Constants.data_root,\n",
-    "                                batch_size=15,\n",
+    "                                batch_size=20,\n",
     "                                embedding_loss_weight=embed_loss_weight,\n",
     "                                classification_loss_weight=1 - embed_loss_weight,\n",
     "                                lr=.0001,\n",
@@ -448,7 +424,7 @@
     "                                  entry['accuracy'],\n",
     "                                  entry['model'],\n",
     "                                 )\n",
-    "                            print('best')\n",
+    "                            print('best',best_score,best_model)\n",
     "                            print('______________')\n",
     "                            pd.DataFrame(results).to_csv(Constants.result_folder + '_alt_gridsearch.csv')\n",
     "                        except Exception as e:\n",
