--- a/TripletModels.ipynb
+++ b/TripletModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -35,10 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb156980",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((6842, 166), (1711, 166))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_labels = pd.read_csv('train_data_augmented_balanceddual.csv')\n",
     "validation_labels = pd.read_csv('validation_data_augmented_balanceddual.csv')\n",
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "02e6f6cd-7a43-48de-a6ac-747821eddb8c",
    "metadata": {
     "scrolled": true,
@@ -71,7 +82,33 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4869, 167)\n",
+      "(1209, 167)\n",
+      "model being saved to ../../data/models/gridsearch3_smalldualencoder_dualfacenet_h400_ed3triplet_decoder__st100_a40_g20_std2_ad2_gd2_rbalancedembed0.11_lw2-1-2_noise01_smote0.5_flprot0.7-0.1_V0.2649\n",
+      "epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curr loss class 7.266725063323975 embed 0.11459586769342422 step 16  |  \r"
+     ]
+    }
+   ],
    "source": [
     "def save_train_history(model,history,root=''):\n",
     "    model_name = model.get_identifier()\n",
@@ -129,6 +166,9 @@
     "                noise=.05,\n",
     "                skintone_patch_anchor_prob=0,\n",
     "                run_name = '',\n",
+    "                smote_prob=.5,\n",
+    "                rotate_prob=.1,\n",
+    "                flip_prob=.7,\n",
     "                **kwargs,\n",
     "               ):\n",
     "    pretraining = classification_loss_weight <= .00001\n",
@@ -149,6 +189,11 @@
     "        save_path += '_spab'+str(skintone_patch_anchor_prob).replace('.','')\n",
     "    save_path += '_lw' + '-'.join([str(l) for l in loss_weights])\n",
     "    save_path += '_noise' + str(noise).replace('0.','').replace('.','')\n",
+    "    if smote_prob > 0:\n",
+    "        save_path += '_smote' + str(smote_prob)\n",
+    "    if rotate_prob + flip_prob > 0:\n",
+    "        save_path += '_flprot' + str(flip_prob) + '-' + str(rotate_prob)\n",
+    "    save_path += \"_V\" + str(np.round(np.random.random(),4))\n",
     "    if upsample:\n",
     "        patience = int(patience/5) + 1\n",
     "    class_sizes = [10,4,2]\n",
@@ -168,6 +213,9 @@
     "                                 skintone_patch_anchor_prob=skintone_patch_anchor_prob,\n",
     "                                 softmax=softmax_upsample_weights,\n",
     "                                 noise_sigma=noise,\n",
+    "                                 smote_prob=.5,\n",
+    "                                 rotate_prob=rotate_prob,\n",
+    "                                 flip_prob=flip_prob,\n",
     "                                 **kwargs)\n",
     "    validation_loader = TripletFaceGenerator(validation_df,Constants.data_root,\n",
     "                                      validation=True,\n",
@@ -343,11 +391,11 @@
     "#     lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.1),decoder=TripletFacenetClassifier(400,st_dims=[100],age_dims=[40],gender_dims=[20]),name='gridsearch_small'),\n",
     "#     lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.3),decoder=TripletFacenetClassifier(400,st_dims=[20],age_dims=[8],gender_dims=[4]),name='gridsearch_sm0ll'),\n",
     "    lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.3),decoder=TripletFacenetClassifier(400,st_dims=[100],age_dims=[40],gender_dims=[20]),name='gridsearch3_small'),\n",
-    "    lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.3),decoder=TripletFacenetClassifier(400,st_dims=[100],age_dims=[100],gender_dims=[100]),name='gridsearch3_medium'),\n",
+    "#     lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.3),decoder=TripletFacenetClassifier(400,st_dims=[100],age_dims=[100],gender_dims=[100]),name='gridsearch3_medium'),\n",
     "#     lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.6),decoder=TripletFacenetClassifier(400,st_dims=[20],age_dims=[8],gender_dims=[4]),name='gridsearch_sm0ll'),\n",
     "#     lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.6),decoder=TripletFacenetClassifier(400,st_dims=[100],age_dims=[40],gender_dims=[20]),name='gridsearch_small'),\n",
     "#     lambda : TripletModel2(encoder=TripletFacenetEncoder(embedding_dropout=.6),decoder=TripletFacenetClassifier(400,st_dims=[100],age_dims=[100],gender_dims=[100]),name='gridsearch_medium'),\n",
-    "        lambda : TripletModel2(encoder=TripletFacenetEncoder(),name='gridsearch_baseline'),\n",
+    "#         lambda : TripletModel2(encoder=TripletFacenetEncoder(),name='gridsearch_baseline'),\n",
     "#     lambda : TripletModel2(encoder=TripletFacenetEncoder(base_model=ResNet18()),decoder=TripletFacenetClassifier(400,st_dims=[100],age_dims=[40],gender_dims=[20]),name='gridsearch3_resnetsmall'),\n",
     "    lambda : TripletModel2(encoder=SimpleEncoder(),name='gridsearch_simple'),\n",
     "#     lambda : TripletModel2(encoder=FrozenDualEncoder(),name='gridsearch_frozen'),\n",
@@ -355,54 +403,59 @@
     "]\n",
     "\n",
     "results = []\n",
-    "for embed_loss_weight in [0,.1]:\n",
-    "    for stap in [0]:\n",
-    "        for noise in [.01]:\n",
-    "            for loss_weights in [[2,1,1]]:\n",
-    "                for model in models:\n",
-    "                    for wt in ['softmax']:\n",
-    "                        if embed_loss_weight == 0 and wt == 'flat':\n",
-    "                            continue\n",
-    "                        softmax = (wt == 'softmax')\n",
-    "                        bias_weight_transform=None\n",
-    "                        if wt == 'flat':\n",
-    "                            bias_weight_transform = lambda x: int(x > 0)\n",
-    "                        try:\n",
-    "                            m,h,entry,mname = train_model(\n",
-    "                                model(),\n",
-    "                                train_labels,\n",
-    "                                validation_labels,\n",
-    "                                Constants.data_root,\n",
-    "                                batch_size=50,\n",
-    "                                embedding_loss_weight=embed_loss_weight,\n",
-    "                                classification_loss_weight=1 - embed_loss_weight,\n",
-    "                                lr=.0001,\n",
-    "                                patience=5,\n",
-    "                                softmax_upsample_weights=softmax,\n",
-    "                                loss_weights=loss_weights,\n",
-    "                                skintone_patch_anchor_prob=stap,\n",
-    "                                skintone_regression=False,\n",
-    "                                noise=noise,\n",
-    "                            )\n",
-    "                            entry['noise'] = noise\n",
-    "                            entry['embed_weight'] = embed_loss_weight\n",
-    "                            entry['model'] = mname\n",
-    "                            entry['st_patch_prob'] = stap\n",
-    "                            entry['softmax'] = softmax\n",
-    "                            entry['weight_type'] = wt\n",
-    "                            entry['loss_weights'] = loss_weights\n",
-    "                            results.append(entry)\n",
-    "                            print('___________')\n",
-    "                            print(entry['score'],\n",
-    "                                  entry['accuracy'],\n",
-    "                                  entry['model'],\n",
-    "                                  entry['embed_weight'],\n",
-    "                                  wt,\n",
-    "                                 )\n",
-    "                            print('______________')\n",
-    "                            pd.DataFrame(results).to_csv(Constants.result_folder + '_weight_gridsearch_presentation2.csv')\n",
-    "                        except Exception as e:\n",
-    "                            print(e)"
+    "best_score = 0\n",
+    "best_model = ''\n",
+    "for model in models:\n",
+    "    for embed_loss_weight in [.1,.9,0]:\n",
+    "        for smote_prob in [.5,0,.9]:\n",
+    "            for noise in [.01]:\n",
+    "                for loss_weights in [[2,1,2]]:\n",
+    "                    for rotate_prob in [0,.2,.5]:\n",
+    "                        for wt in ['default','softmax']:\n",
+    "                            if embed_loss_weight == 0 and wt == 'flat':\n",
+    "                                continue\n",
+    "                            softmax = (wt == 'softmax')\n",
+    "                            bias_weight_transform=None\n",
+    "                            if wt == 'flat':\n",
+    "                                bias_weight_transform = lambda x: int(x > 0)\n",
+    "                            try:\n",
+    "                                m,h,entry,mname = train_model(\n",
+    "                                    model(),\n",
+    "                                    train_labels,\n",
+    "                                    validation_labels,\n",
+    "                                    Constants.data_root,\n",
+    "                                    batch_size=50,\n",
+    "                                    embedding_loss_weight=embed_loss_weight,\n",
+    "                                    classification_loss_weight=1 - embed_loss_weight,\n",
+    "                                    lr=.0001,\n",
+    "                                    patience=7,\n",
+    "                                    softmax_upsample_weights=softmax,\n",
+    "                                    loss_weights=loss_weights,\n",
+    "                                    skintone_patch_anchor_prob=0,\n",
+    "                                    skintone_regression=False,\n",
+    "                                    smote_prob=smote_prob,\n",
+    "                                    noise=noise,\n",
+    "                                )\n",
+    "                                entry['noise'] = noise\n",
+    "                                entry['embed_weight'] = embed_loss_weight\n",
+    "                                entry['model'] = mname\n",
+    "                                entry['softmax'] = softmax\n",
+    "                                entry['weight_type'] = wt\n",
+    "                                entry['loss_weights'] = loss_weights\n",
+    "                                if entry['score'] > best_score:\n",
+    "                                    best_score = entry['score']\n",
+    "                                    best_model = entry['model']\n",
+    "                                results.append(entry)\n",
+    "                                print('___________','run',len(results)+1,'_________')\n",
+    "                                print(entry['score'],\n",
+    "                                      entry['accuracy'],\n",
+    "                                      entry['model'],\n",
+    "                                     )\n",
+    "                                print('best',best_score,best_model)\n",
+    "                                print('______________')\n",
+    "                                pd.DataFrame(results).to_csv(Constants.result_folder + '_smote_gridsearch.csv')\n",
+    "                            except Exception as e:\n",
+    "                                print(e)"
    ]
   },
   {
